# arm-journey

./: .gitignore  0boost.s  0f4ocd.cfg  0stf446.ld  README.md
1-gcc-pico.folder/arm-none-eabi/picolibc/arm-none-eabi/include/: picolibc.h
1-gcc-pico.folder/lib/gcc/arm-none-eabi/11.3.1/: picolibc.specs  picolibcpp.specs
1-ocd-conf.folder/: cf1.cfg  cf2.cfg  f446ocd.cfg
1-template.folder/: codingNOTE.txt  stnote.txt
1-template.folder/Startup/: startup_stm32f446retx.s
arm-root/lib/: libstdc++.a-gdb.py
arm-root/lib/arm/v5te/hard/: libstdc++.a-gdb.py
arm-root/lib/arm/v5te/softfp/: libstdc++.a-gdb.py
arm-root/lib/thumb/nofp/: libstdc++.a-gdb.py
arm-root/lib/thumb/v6-m/nofp/: libstdc++.a-gdb.py
arm-root/lib/thumb/v7+fp/hard/: libstdc++.a-gdb.py
asmf446/: .gdbinit  .gitignore  asmtchain.cmake
asmf446/9-uart-src/: head.s
asmf446/bare1/: CMakeCache.txt  CMakeLists.txt  Makefile  clangcml.txt  cmake_install.cmake  ma.s  start.s  stf446.ld
asmf446/bare1/bbu/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  mybarebone  ohno.map
asmf446/meta-uart/: CMakeLists.txt  auto.zsh  gdbinit  head.s  ma.s
asmf446/meta-uart/build-metal/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  meta-uart-obj  ohno.map
cf446/: mac.c
cf446/agdb/: m1.map  mac.s
cf446/c001/: CMakeLists.txt  cno.map  main.c  nope
lib-pico/inc/release/: picolibc.h
template.folder/: build-log  f446_01.elf  f446_01.list  f446_01.map
template.folder/Src/: main.s
wORKING-IN-PROCESS/archieve/: picolibc-1.7.9.tar.xz
(+27 files in other folders)
